--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+        <link rel="icon" href="{{ asset('img/glider.svg') }}">
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -13,7 +13,30 @@
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
+
+    <header class="outer-wrap-header" style="background-image: url({{ asset('img/watercolor1903300.jpg') }})">
+        <div class="inner-wrap-header">
+        <h1>MVC</h1>
+        <nav class="my-navbar">
+            <ul class="my-navbar">
+                <li><a href="{{ path('home') }}">Home</a></li>
+                <li><a href="{{ path('about') }}">About</a></li>
+                <li><a href="{{ path('lucky_number') }}">Lucky number</a></li>
+            </ul>
+        </nav>
+        </div>
+    </header>
+
     <body>
+        <main>
         {% block body %}{% endblock %}
+        </main>
     </body>
+
+    <footer>
+        <p>Test footer</p>
+    </footer>
+    <byline>
+        <p>Test byline</p>
+    </byline>
 </html>
