--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -7,7 +7,7 @@
         <div class="home">
             <h1>Me</h1>
             <img src="{{ asset('img/parv3.jpg') }}" alt="Picture of me from my wedding">
-            <p>This is my me-page for the MVC course at BTH (Bleking Tekniska Högskola).</p>
+            <p>This is my me-page for the MVC course at BTH (Blekinge Tekniska Högskola).</p>
             <p>My name is Patrik Arvius. I was born and raised in Stockholm but have family spread out across the country from the pineclad, reindeer inhabited 
             north where the sun never sets (or never rises) to the fertile plains of the south where the rapeseed fields color the world yellow and ripple like waves in the wind.</p>
             <p>I love food, with a penchant for asian cuisine aswell as motor racing (ironic seeing I don't have a drivers license), all sorts of games from pc to boardgames and swimming</p>
