--- a/templates/lucky_number.html.twig
+++ b/templates/lucky_number.html.twig
@@ -5,6 +5,7 @@
 {% block title %}Lucky{% endblock %}
 
 {% block body %}
+    <article>
     <h1>Your totally amazing lucky number generator</h1>
     <p>Reload the page to get a new lucky number.</p>
     <p>This is your current magic number: {{ number }}</p>
@@ -12,4 +13,5 @@
         <img src="{{ asset('img/aurora.jpg') }}" alt="Picture of the aurora borealis">
         <figcaption><p>Are you sure your lucky number isn't 42?</p></figcaption>
     </figure>
+    </article>
 {% endblock %}
