Tweak css, Add Dice class and controller, Add Dice twig templates

--- a/templates/api.html.twig
+++ b/templates/api.html.twig
@@ -3,8 +3,8 @@
 {% block title %}Api{% endblock %}
 
 {% block body %}
-    <article class="art-row">
-        <div class="div-col-2">
+    <article>
+        <div>
             <h1>Currently available API routes</h1>
             <ul class="about-links">
             {%for descript, route in routes%}
