--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,6 +24,8 @@
                 <li><a href="{{ path('report') }}">Reports</a></li>
                 <li><a href="{{ path('lucky_number') }}">Lucky</a></li>
                 <li><a href="{{ path('api') }}">Api</a></li>
+                <li><a href="{{ path('pig_start') }}">Pig game</a></li>
+                <li><a href="{{ path('test_roll_dice',{num_dice: 0}) }}">Dice test</a></li>
             </ul>
         </nav>
         </div>
@@ -34,7 +36,7 @@
         {% block body %}{% endblock %}
             <div class="byline-wrapper">
                 <div class="byline">
-                    <img src="img/parv2.jpg" alt="Patrik Arvius" class="byline-image">
+                    <img src="/img/parv2.jpg" alt="Patrik Arvius" class="byline-image">
                     <p>
                     <b>Patrik Arvius</b> lives in Hammarby Sjöstad, Stockholm and studies webbdevelopment at 
                     Blekinge Tekniska Högskola. In his spare time you'll find him in the 50m pool at Eriksdalsbadet, panting
