--- a/templates/card/draw_num.html.twig
+++ b/templates/card/draw_num.html.twig
@@ -16,7 +16,7 @@
     </ul>
 </div>
 <div class="div-col-2">
-<h1>Card game</h1>
+<h1>Your cards</h1>
 
 {{ include('flash.html.twig') }}
 
@@ -29,11 +29,33 @@
     {% endfor %}
 {% endfor %}
 
-<form class="cardform" method="post" action="">
-    <input type="submit" name="do_it" value="Create a deck of cards">
-</form>
+<p class="cardp">The deck has {{ numCards }} cards left.</p>
 
-<p> Berätta om strukturen på dina klasser, vilka klasser har du och hur är de relaterade till varandra. Rita ett UML och visa här</p>
+{#
+<form class="cardform" method="post" action="">
+    <input class="slider" type="range" id="num_to_draw" min="1" max="{{ numCards }}" value="1"
+    oninput="this.nextElementSibling.value = this.value"
+    >
+    <input value="1" name="number" id="number">
+    <input type="submit" name="draw" value="Cards to draw"
+    onClick="this.form.action='{{ path('card_deck_draw_num') }}';"
+    >
+</form>
+#}
+
+{% if numCards is same as(0) %}
+<form class="cardform" method="post" action="">
+    <input type="submit" name="restart" value="Shuffle a new deck"
+    onClick="this.form.action='{{ path('card_deck_restart') }}';"
+    >
+</form>
+{% endif%}
+
+<ul class="card">
+{% for card in cards %}
+    <li class="card">{{ card }}</li>
+{% endfor %}
+</ul>
 
 </div>
 </article>
