--- a/templates/card/shuffle.html.twig
+++ b/templates/card/shuffle.html.twig
@@ -12,7 +12,7 @@
     <li><a href="{{ path('card_deck') }}">Show the entire deck (sorted)</a></li>
     <li><a href="{{ path('card_deck_shuffle') }}">Show the shuffled deck</a></li>
     <li><a href="{{ path('card_deck_draw') }}">Draw a card</a></li>
-    <li><a href="{{ path('card_deck_draw_num') }}">Draw X amount of cards</a></li>
+    <li><a href="{{ path('card_deck_draw_num',{num_cards: 0}) }}">Draw X amount of cards</a></li>
     </ul>
 </div>
 <div class="div-col-2">
