Fix controllers and views in accordance with phpmd and phpstan

--- a/templates/pig/test/roll.html.twig
+++ b/templates/pig/test/roll.html.twig
@@ -7,9 +7,9 @@
 <div class="div-col-3">
 <h1>Roll a dice</h1>
 <p>Try to roll 
-    <a href="{{ path('test_roll_dice', {num_dice: 5}) }}">5</a>
+    <a href="{{ path('test_roll_dice', {numDice: 5}) }}">5</a>
     or 
-    <a href="{{ path('test_roll_dice', {num_dice: 10}) }}">10</a>
+    <a href="{{ path('test_roll_dice', {numDice: 10}) }}">10</a>
     dices.
 </p>
 {% if diceRolls %}
