--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
                 <li><a href="{{ path('api') }}">Api</a></li>
                 <li><a href="{{ path('pig_start') }}">Pig game</a></li>
                 <li><a href="{{ path('card_start') }}">Card</a></li>
-                <li><a href="{{ path('test_roll_dice',{num_dice: 0}) }}">Dice test</a></li>
+                <li><a href="{{ path('test_roll_dice',{numDice: 0}) }}">Dice test</a></li>
             </ul>
         </nav>
         </div>
