--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,8 +24,9 @@
                 <li><a href="{{ path('report') }}">Reports</a></li>
                 <li><a href="{{ path('lucky_number') }}">Lucky</a></li>
                 <li><a href="{{ path('api') }}">Api</a></li>
-                <li><a href="{{ path('pig_start') }}">Pig game</a></li>
+                <li><a href="{{ path('pig_start') }}">Pig</a></li>
                 <li><a href="{{ path('card_start') }}">Card</a></li>
+                <li><a href="{{ path('twentyone') }}">Twenty One</a></li>
                 <li><a href="{{ path('test_roll_dice',{numDice: 0}) }}">Dice test</a></li>
             </ul>
         </nav>
