Add classes related to twenty one game, Modify game controller

--- a/templates/twentyone/gamedocs.html.twig
+++ b/templates/twentyone/gamedocs.html.twig
@@ -58,7 +58,7 @@ class TwentyOneBoard {
 <li><b>TwentyOneBoard</b>: A class representing the game board, its purpose is to handle the game logic.</li>
 <li><b>DeckOfCards</b>: A class representing a deck of cards(objects)</li>
 <li><b>Player</b>: A class representing the player, which can hold a hand of cards</li>
-<li><b>Dealer</b>: A class representing the oponent of the game, it can probably inherit from the player class and then add some dealer specific logic.</li>
+<li><b>Dealer</b>: A class representing the opponent of the game, it can probably inherit from the player class and then add some dealer specific logic if needed.</li>
 <li><b>CardHand</b>: A class representing a hand of cards, can hold card objects</li>
 <li><b>CardGraphic</b>: A class representing a single playing card. With suit, value and graphical representation.</li>
 </div>
