--- a/templates/twentyone/gameplay.html.twig
+++ b/templates/twentyone/gameplay.html.twig
@@ -9,6 +9,7 @@
     <ul class="about-links">
     <li><a href="{{ path('twentyone') }}">Twenty one home</a></li>
     <li><a href="{{ path('twentyone_doc') }}">Documentation</a></li>
+    <li><a href="{{ path('session_content') }}">Session</a></li>
     </ul>
 </div>
 <div class="div-col-2">
