Add functionality to TwentyOne class, Use sympfony asset for byline image

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,7 +38,7 @@
         {% block body %}{% endblock %}
             <div class="byline-wrapper">
                 <div class="byline">
-                    <img src="/img/parv2.jpg" alt="Patrik Arvius" class="byline-image">
+                    <img src="{{ asset('img/parv2.jpg') }}" alt="Patrik Arvius" class="byline-image">
                     <p>
                     <b>Patrik Arvius</b> lives in Hammarby Sjöstad, Stockholm and studies webbdevelopment at 
                     Blekinge Tekniska Högskola. In his spare time you'll find him in the 50m pool at Eriksdalsbadet, panting
