Fix TwentyOneController to work with gameplay view, Add content to gameplay view

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -416,6 +416,14 @@ form.cardform input.slider {
     margin-right: auto;
 }
 
+form.cardform-tight {
+    text-align: center;
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+    margin-bottom: 0px;
+}
+
 input {
     margin-bottom: 12px;
 }
